--- a/src/scss/pages/add-vehicle.scss
+++ b/src/scss/pages/add-vehicle.scss
@@ -1,52 +1,8 @@
 @use "../utils/"as *;
 
-.price-box {
-
-    .radio-check-switch {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        .form-item {
-            width: 250px;
-            height: auto;
-
-            .radio-switch-state {
-                margin: 32px 0;
-                padding: 2.3rem 1.5rem;
-
-                .price-ul {
-                    margin-top: 32px;
-                    font-size: 14px;
-                    line-height: 23px;
-
-                    margin-bottom: 0;
-                    color: var(--color-dark-blue) !important;
-
-                    li {
-                        font-size: 13px;
-                        margin-bottom: 0;
-                        color: var(--color-dark-blue) !important;
-                    }
-                }
-
-                .btn-primary {
-                    margin-top: 52px;
-                }
-            }
-        }
-
-        .vs-box {
-            width: 50px;
-            height: 47px;
-            margin: 0 21px;
-
-            .progress-round {
-                position: relative;
-                width: 50px;
-                height: 47px;
-            }
-        }
+.add-driver-block {
+    .radio-label {
+        font-size: 14px;
     }
 }
 
