--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1261,6 +1261,31 @@ tr:last-child td:last-child {
   height: 47px;
 }
 
+.box-shdow {
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
+  border: none;
+  max-width: 270px;
+  margin: 0 auto;
+  height: 338.94px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 29px;
+}
+
 @media screen and (max-width: 575px) {
   .price-box .radio-check-switch {
     -ms-flex-wrap: nowrap;
@@ -2207,6 +2232,15 @@ label {
 }
 .radio-inline {
   margin-bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 .radio-control {
   opacity: 0;
@@ -2238,6 +2272,10 @@ label {
   margin-left: 7px;
   font-family: "Roboto";
   cursor: pointer;
+}
+
+.radio-box-custom {
+  width: 100%;
 }
 
 .radio {
