--- a/src/assets/css/pages/price-box.css
+++ b/src/assets/css/pages/price-box.css
@@ -154,6 +154,31 @@
   height: 47px;
 }
 
+.box-shdow {
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+          box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+  border-radius: 12px;
+  border: none;
+  max-width: 270px;
+  margin: 0 auto;
+  height: 338.94px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 29px;
+}
+
 @media screen and (max-width: 575px) {
   .price-box .radio-check-switch {
     -ms-flex-wrap: nowrap;
