--- a/src/scss/pages/price-box.scss
+++ b/src/scss/pages/price-box.scss
@@ -50,7 +50,20 @@
     }
 }
 
-
+.box-shdow{
+    background: #FFFFFF;
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.08);
+    border-radius: 12px;
+    border:none;
+    max-width: 270px;
+    margin: 0 auto;
+    height: 338.94px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 29px;
+}
 
 @media screen and (max-width: 575px) {
     .price-box {
