--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -86,7 +86,7 @@ a {
 img,
 picture {
     max-width: 100%;
-    display: block;
+    display: inline-block;
 }
 
 /* Inherit fonts for inputs and buttons */
