--- a/src/scss/utils/_color.scss
+++ b/src/scss/utils/_color.scss
@@ -13,7 +13,9 @@ $colors: ("primary": $primary,
     "white": $white,
     "smoke": $smoke,
     "divider": $divider,
+    "drop-shadow": $drop-shadow,
     "border-light": $border-light,
+    "border-light2": $border-light2,
     "box-border": $box-border,
     "btn-outline": $btn-outline,
     "disable": $disable,
@@ -21,6 +23,8 @@ $colors: ("primary": $primary,
     "checkbox": $checkbox,
     "checkbox-bg": $checkbox-bg,
     "light-gray": $light-gray,
+    "light-gray3": $light-gray3,
+    "light-gray4": $light-gray4,
     "has-error": $has-error,
     "blue-light": $blue-light,
     "blue-light2": $blue-light2,
