--- a/src/scss/utils/_variable.scss
+++ b/src/scss/utils/_variable.scss
@@ -13,7 +13,9 @@ $black: #000000;
 $white: #ffffff;
 $smoke:rgba(255, 255, 255, 0.9);
 $divider: rgba(34, 34, 34, 0.2);
+$drop-shadow: rgba(0, 0, 0, 0.149);
 $border-light: #E6E6E6;
+$border-light2: #F5F5F5;
 $box-border: #DBDBDB;
 $btn-outline: #9B9B9B;
 $disable: #ACACAC;
@@ -21,6 +23,8 @@ $placeholder: #8F969A;
 $checkbox: #929598;
 $checkbox-bg: #D1362F;
 $light-gray: #8A8A8A;
+$light-gray3: #999999;
+$light-gray4: #cccccc;
 $has-error: #BF0101;
 $blue-light: #E6F1F9;
 $blue-light2: #F2F8FD;
