--- a/src/assets/css/pages/remarket copy.css
+++ b/src/assets/css/pages/remarket copy.css
@@ -132,7 +132,35 @@ ul {
   list-style-type: disc;
 }
 ul li {
-  color: var(--color-dark) !important;
+  color: var(--color-black) !important;
   margin-bottom: 7px;
+}
+
+@media screen and (max-width: 1024px) {
+  .remarket-tab div#v-pills-tab {
+    width: auto;
+  }
+}
+@media screen and (max-width: 766px) {
+  .flex-column {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+  }
+}
+@media screen and (max-width: 575px) {
+  .flex-column {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+  }
+  .summary-data .checkbox-label {
+    min-width: 32%;
+  }
+  .upload-box {
+    width: auto;
+  }
 }
 /*# sourceMappingURL=remarket copy.css.map */
