--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -15,9 +15,74 @@
 
 			&:last-of-type {
 				border-bottom-right-radius: 8px;
-   				border-bottom-left-radius: 8px;
+				border-bottom-left-radius: 8px;
+			}
+
+			&.accordion-blue {
+				border: 0;
+				border-radius: 0;
+				margin-bottom: 20px;
+				background-color: white;
+
+				&>.accordion-header .accordion-button {
+					background: #F2F7FC;
+					border: 0;
+					border-radius: 0;
+					padding: 5px 28px;
+
+					img {
+						margin-right: 16px;
+						width: 50px;
+						height: 50px;
+						object-fit: contain;
+						object-position: center;
+					}
+
+					&:after {
+						content: none;
+					}
+				}
+			}
+
+			&.accordion-white {
+				border: 0;
+				border-radius: 0;
+				margin-bottom: 16px;
+				background-color: var(--color-white);
+				box-shadow: 0px 20px 30px 0px #00000014;
+
+				&>.accordion-header .accordion-button {
+					background: var(--color-white);
+					border: 0;
+					border-radius: 0;
+					padding: 12px 16px;
+
+
+					img {
+						margin-right: 16px;
+						width: 24px;
+						object-fit: contain;
+						object-position: center;
+					}
+
+					.accordion-title {
+						h4 {
+							@include toRem(font-size, 16);
+							@include toRem(line-height, 24);
+							font-weight: 400;
+						}
+
+						p {
+							@include toRem(font-size, 14);
+							@include toRem(line-height, 22);
+							font-weight: 400;
+							color: var(--color-light-gray);
+						}
+					}
+				}
 			}
 		}
+
 		.accordion-button {
 			// display: flex;
 			// justify-content: space-between;
@@ -29,6 +94,7 @@
 
 			&:not(.collapsed) {
 				background: transparent;
+
 				&:after {
 					transform: translateY(-50%) rotate(-180deg);
 				}
@@ -38,7 +104,7 @@
 				display: flex;
 				align-items: center;
 
-				.checkbox-inline  {
+				.checkbox-inline {
 					margin-bottom: 0;
 				}
 			}
@@ -61,8 +127,8 @@
 				background-image: url("../../images/down-arrow.svg");
 				background-size: 10px;
 				position: absolute;
-		    	right: 20px;
-    			top: 50%;
+				right: 20px;
+				top: 50%;
 				transform: translateY(-50%)
 			}
 
