and new Payment method update

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1866,6 +1866,7 @@ tr:last-child td:last-child {
 .billing-section .method-footer {
   margin-top: auto;
 }
+.billing-section .method-footer a,
 .billing-section .method-footer button {
   font-size: 12px !important;
   font-weight: 500;
