--- a/src/scss/pages/client-profile.scss
+++ b/src/scss/pages/client-profile.scss
@@ -425,6 +425,7 @@
     .method-footer {
         margin-top: auto;
 
+        a,
         button {
             font-size: 12px !important;
             font-weight: 500;
