--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -402,7 +402,7 @@ main {
 
     .checkbox-label {
 
-        margin-left: 0 !important;
+        margin-left: 5px !important;
 
         font-size: 13px;
     }
